--- a/css/main.css
+++ b/css/main.css
@@ -32,6 +32,19 @@ li a:hover {
     background-color: #4CAF50;
 }
  
+.footer {
+
+    padding: 0.3% 0 0.3% 0.6%;
+    background-color: #333;
+} 
+
+.footer-li {
+    color: white;
+    float: center;
+    text-align: center;
+    display: inline;
+    border-right: 0px solid #bbb;
+}
  /* Desktop */
  
  @media only screen and (min-width: 768px){
