--- a/css/main.css
+++ b/css/main.css
@@ -27,13 +27,17 @@ li a:hover {
     background-color: #555;
     color: white;
 }
+
+img{
+    
+}
  
 .active {
     background-color: #4CAF50;
 }
  
 .footer {
-
+    overflow: hidden;
     padding: 0.3% 0 0.3% 0.6%;
     background-color: #333;
 } 
@@ -44,6 +48,14 @@ li a:hover {
     text-align: center;
     display: inline;
     border-right: 0px solid #bbb;
+}
+
+
+#banner {
+    /* width: 100%; */
+    height: auto;
+    max-width: 100%;
+    /* float: center; */
 }
  /* Desktop */
  
