--- a/html/static/css/main.css
+++ b/html/static/css/main.css
@@ -57,6 +57,11 @@ img{
     max-width: 100%;
     /* float: center; */
 }
+
+#LED, #movement, #voice{
+    display: none;
+    
+}
  /* Desktop */
  
  @media only screen and (min-width: 768px){
