--- a/html/static/css/main.css
+++ b/html/static/css/main.css
@@ -6,7 +6,8 @@ ul {
     padding: 0;
     width: 100%;
     overflow: hidden;
-    background-color: #333;
+    /* background-color: #333;*/
+    background-color: #0e2f44;
     
 }
 
