--- a/html/static/css/main.css
+++ b/html/static/css/main.css
@@ -52,12 +52,20 @@ img{
     border-right: 0px solid #bbb;
 }
 
+#logo {
+    /* width: 100%; */
+    height: auto;
+    max-width: 60%;
+    float: center; 
+}
+
 
 #banner {
     /* width: 100%; */
     height: auto;
     max-width: 100%;
     float: center; 
+    display:block;
 }
 
 
