--- a/html/static/css/main.css
+++ b/html/static/css/main.css
@@ -57,6 +57,8 @@ img{
     height: auto;
     max-width: 60%;
     float: center; 
+    text-align:center;
+    align:center;
 }
 
 
@@ -66,6 +68,8 @@ img{
     max-width: 100%;
     float: center; 
     display:block;
+    text-align:center;
+    align:center;
 }
 
 
