--- a/html/static/css/main.css
+++ b/html/static/css/main.css
@@ -31,7 +31,8 @@ li a:hover {
 }
 
 img{
-    
+    margin: 0 auto;
+    display: block;
 }
  
 .active {
@@ -53,7 +54,7 @@ img{
 }
 
 #logo {
-    /* width: 100%; */
+    width: 60%;
     height: auto;
     max-width: 60%;
     float: center; 
