--- a/html/static/css/main.css
+++ b/html/static/css/main.css
@@ -86,6 +86,17 @@ img{
 #icons li img {padding: 8px 18px 2px 18px; align: center;}
 #icons li h6 {color: #333; font-size:12px; text-align: center; margin:0; padding:0;}
 
+.container {
+    width: 200px;
+    height: 120px;
+}
+
+/* resize images */
+.container img {
+    width: 100%;
+    height: auto;
+}
+
 
 
  /* Desktop */
