--- a/html/static/css/main.css
+++ b/html/static/css/main.css
@@ -89,6 +89,9 @@ img{
 .container {
     width: 200px;
     height: 120px;
+    float: center; 
+    text-align:center;
+    align:center;
 }
 
 /* resize images */
